[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/sheets/magat_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/sheets/mira.png" type="Texture" id=3]
[ext_resource path="res://sprites/shadows/shadow.png" type="Texture" id=4]
[ext_resource path="res://scenes/hud/gameHud.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/healthCompent.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/components/hitboxComponent.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 23 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 23 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 18, 23 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 18, 23 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 23, 18, 23 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 18, 23, 18, 23 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 36, 23, 18, 23 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 54, 23, 18, 23 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "running",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 2.3
height = 9.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "click",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="player" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 7
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11.5 )
frames = SubResource( 7 )
animation = "idle"
frame = 3
playing = true

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 0, -5 )
texture = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="hitboxComponent" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 32
healthPath = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxComponent"]
position = Vector2( 0, -8 )
shape = SubResource( 8 )

[node name="HealthComponent" parent="." instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -224
limit_top = -188
limit_right = 224
limit_bottom = 156
smoothing_enabled = true
smoothing_speed = 6.0
editor_draw_limits = true

[node name="cursor" type="AnimatedSprite" parent="."]
position = Vector2( 0, -39 )
z_index = 6
frames = SubResource( 16 )

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[connection signal="health_changed" from="HealthComponent" to="." method="_on_HealthComponent_health_changed"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
